--- a/main.css
+++ b/main.css
@@ -131,6 +131,7 @@ footer {
 }
 
 p {
-    max-width: 600px;
+    max-width: 800px;
     text-align: center;
+    margin: 20px;
 }
